# pitchcraft

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKPOINTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.hallmark/: log.json
agents/design_ref/: _color_extract.py  _llm.py  _models.py  _render.py  agent.py
intro/: package-lock.json  package.json
intro/src/: Intro.tsx  Root.tsx
secrets/: README.md
tests/agents/: test_design_ref.py
tests/audit/: test_audit.py  test_dollar_impact.py  test_firecrawl.py  test_heuristics.py  test_pagespeed.py
tests/builder/: test_cli.py  test_prototype.py  test_site.py  test_transform.py  test_vercel.py
tests/council/: test_animation.py  test_audit_ux.py  test_brand_voice.py  test_cli.py  test_hallmark_picker.py  test_inspiration.py  test_moderator.py  test_orchestrator.py
tests/fixtures/: apollo_sample.csv  approved_sample.json  audit_sample.json  design_brief_sample.md  hallmark_log_sample.json  moodboard_sample.json  stitch_about_v0.html  stitch_contact_v2.html  stitch_landing_v0.html  stitch_services_v1.html
tests/polisher/: test_animation_wire.py  test_autotag.py  test_brief_parser.py  test_cli.py  test_honest_copy.py  test_mobile_fix.py  test_polish.py  test_premium_css.py  test_slop_gates.py
tests/scrapers/: conftest.py  test_arena.py  test_awwwards.py  test_capture.py  test_cli.py  test_codrops.py  test_cosmos.py  test_gsap_showcase.py  test_pinterest.py  test_r3f_examples.py  test_react_bits.py  test_twentyfirst.py
tests/sheets/: conftest.py  test_apollo.py  test_cli.py  test_client.py  test_schema.py
tests/stitch/: test_fulfiller.py  test_screens.py
tools/approval/: __init__.py  __main__.py  app.py
tools/audit/: __init__.py  __main__.py  _dollar_impact.py  _firecrawl.py  _heuristics.py  _models.py  _pagespeed.py  _slug.py  audit.py
tools/builder/: __init__.py  __main__.py  _assets.py  _models.py  _site.py  _transform.py  _vercel.py  cli.py  prototype.py
tools/council/: __init__.py  __main__.py  _models.py  cli.py  moderator.py  orchestrator.py
tools/email/: __init__.py  __main__.py  agent.py  cli.py  gmail_send.py  llm.py  template.py
tools/keywords/: __init__.py  __main__.py  bucket.py  cli.py  crawl.py  extract.py  pipeline.py  validate.py
tools/llm/: __init__.py  client.py
tools/orchestrator/: __init__.py  __main__.py  _models.py  _phases.py  _state.py  _workers.py  cli.py  runner.py
tools/pdf/: __init__.py  __main__.py  _brand.py  _competitors.py  _humanize.py  audit.py  cli.py  deliverables.py  proposal.py  renderer.py
tools/polisher/: __init__.py  __main__.py  _animation_wire.py  _autotag.py  _brief_parser.py  _hero_video.py  _honest_copy.py  _html.py  _mobile_fix.py  _models.py  _perf.py  _premium_css.py  _slop_gates.py  cli.py  polish.py
tools/scrapers/: _cache.py  _capture.py  _models.py  _slug.py  arena.py  awwwards.py  behance_rss.py  cli.py  codrops.py  cosmos.py  dribbble_rss.py  (+7 more)
(+21 files in other folders)
