[project]
name = "website-generator"
version = "0.1.0"
description = "Mass produce prototype websites, audit PDFs, and growth proposals for local service businesses."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Harsh Patadia", email = "hello@harshpatadia.space" }]
license = { text = "MIT" }
keywords = ["website-generator", "agency-automation", "audit", "lead-generation", "marketing-automation", "llm-fallback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/hp-8/website-generator"
Repository = "https://github.com/hp-8/website-generator"
Issues = "https://github.com/hp-8/website-generator/issues"
Author = "https://www.harshpatadia.space/"

dependencies = [
    "scrapling[fetchers]>=0.2.9,<0.3",
    "playwright>=1.47.0",
    "requests>=2.32.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.2",
    "firecrawl-py>=1.6.0",
    "google-generativeai>=0.8.0",
    "weasyprint>=62.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "typer>=0.12.5",
    "Pillow>=10",
    "numpy>=1.26",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.34.0"]
groq = ["groq>=0.11.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.3",
    "requests-mock>=1.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents"]
